--- a/sMasterK/sMasterK/pesi/afka.xaml
+++ b/sMasterK/sMasterK/pesi/afka.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-              BackgroundImageSource="pusja.png"
-             x:Class="sMasterK.funkt.persi">
+             x:Class="sMasterK.pesi.afka">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
